force-app/main/default/objects/B25__Resource__c/B25__Resource__c.object-meta.xml
<CustomObject>
    <description>Resources to which users can use to link Reservations.</description>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>