force-app/main/default/objects/B25__Resource__c/fields/B25__Api_Visible__c.field-meta.xml
<CustomField>
    <fullName>B25__Api_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows this Resource to be returned by the Booker25 REST API</description>
    <inlineHelpText>Permet à cette ressource d’être retournée par l’API REST de Booker25</inlineHelpText>
    <label>Api Visible</label>
    <type>Checkbox</type>
</CustomField>