force-app/main/default/objects/B25__Resource__c/fields/B25__Base_Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Base_Price__c</fullName>
    <description>Takes the default price of the type, if the default price of the Resource is null.</description>
    <formula>IF(ISBLANK(B25__Default_Price__c), B25__Resource_Type__r.B25__Default_Price__c, B25__Default_Price__c)</formula>
    <inlineHelpText>S’il n’y a pas de prix par défaut pour la ressource, le prix de base sera égal au prix par défaut du type de ressource.</inlineHelpText>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>