force-app/main/default/objects/B25__Resource__c/fields/B25__Booker25_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Booker25_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Booker25 System Field. Do not modify.</description>
    <externalId>true</externalId>
    <label>Booker25 Id</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>