force-app/main/default/objects/B25__Resource__c/fields/B25__Capacity__c.field-meta.xml
<CustomField>
    <fullName>B25__Capacity__c</fullName>
    <description>The capacity of this Resource, i.e. the maximum number of occupants of a meeting room.</description>
    <inlineHelpText>La capacité de cette ressource, c’est-à-dire le nombre maximal d’occupants d’une salle de réunion.</inlineHelpText>
    <label>Default Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>