force-app/main/default/objects/B25__Resource__c/fields/B25__Context__c.field-meta.xml
<CustomField>
    <fullName>B25__Context__c</fullName>
    <description>If the Resource has both a parent and grand-parent, the context will equal their names. If it only has a parent, the context equals the parent&apos;s name. If the Resource has no parent, then the context will be blank.</description>
    <formula>IF( 
ISNULL(B25__Parent__c), 
&apos;&apos;, 
B25__Parent__r.Name + IF( 
OR(ISNULL(B25__Parent__r.B25__Parent__c), ISBLANK(B25__Parent__r.B25__Parent__r.Name)), 
&apos;&apos;, 
&apos;, &apos; + B25__Parent__r.B25__Parent__r.Name 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si la ressource a un parent et un grand-parent, le contexte sera égal à leurs noms. Si elle n’a qu’un parent, le contexte est égal au nom du parent. Si la ressource n’a pas de parent, le contexte sera vide.</inlineHelpText>
    <label>Context</label>
    <type>Text</type>
</CustomField>