force-app/main/default/objects/B25__Resource__c/fields/B25__Default_Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Price__c</fullName>
    <description>This is the default price used to calculate Reservation prices for this Resource.</description>
    <inlineHelpText>Il s’agit du prix par défaut utilisé pour calculer les prix de réservation pour cette ressource.</inlineHelpText>
    <label>Default Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>