force-app/main/default/objects/B25__Resource__c/fields/B25__Default_Price_Calculation__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Price_Calculation__c</fullName>
    <description>How should the price of this Reservation be calculated?</description>
    <inlineHelpText>Comment le prix de cette réservation doit-il être calculé ?</inlineHelpText>
    <label>Default Price Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PER_PERSON</fullName>
            </value>
            <value>
                <fullName>PER_TIME_UNIT</fullName>
            </value>
            <value>
                <fullName>PER_PERSON_PER_TIME_UNIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>