force-app/main/default/objects/B25__Resource__c/fields/B25__Description__c.field-meta.xml
<CustomField>
    <fullName>B25__Description__c</fullName>
    <description>Description of the Resource.</description>
    <inlineHelpText>Description de la ressource.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>