force-app/main/default/objects/B25__Resource__c/fields/B25__Full_Path__c.field-meta.xml
<CustomField>
    <fullName>B25__Full_Path__c</fullName>
    <formula>B25__Materialized_Path__c + B25__Booker25_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Path</label>
    <type>Text</type>
</CustomField>