force-app/main/default/objects/B25__Resource__c/fields/B25__Image_Url__c.field-meta.xml
<CustomField>
    <fullName>B25__Image_Url__c</fullName>
    <description>Contains the URL of the image of a resource</description>
    <label>Image Url</label>
    <type>Url</type>
</CustomField>