force-app/main/default/objects/B25__Resource__c/fields/B25__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>B25__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a Resource is inactive, it and its children cannot be booked.</description>
    <inlineHelpText>Lorsqu’une ressource est inactive, elle et ses enfants ne peuvent pas être réservés.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>