force-app/main/default/objects/B25__Resource__c/fields/B25__IsVirtual__c.field-meta.xml
<CustomField>
    <fullName>B25__IsVirtual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sort of queue for the ABR Location where a booking is placed when the ABR fails to place a booking in any other non-virtual Resource.</description>
    <inlineHelpText>Sorte de file d’attente pour l’ABR d’emplacement où une réservation est placée lorsque la ABR ne parvient pas à placer une réservation dans toute autre ressource non virtuelle.</inlineHelpText>
    <label>Is Virtual</label>
    <type>Checkbox</type>
</CustomField>