force-app/main/default/objects/B25__Resource__c/fields/B25__Materialized_Path__c.field-meta.xml
<CustomField>
    <fullName>B25__Materialized_Path__c</fullName>
    <description>Booker25 System Field. Do not modify.</description>
    <externalId>true</externalId>
    <label>Materialized Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>