force-app/main/default/objects/B25__Resource__c/fields/B25__MaxCapacity__c.field-meta.xml
<CustomField>
    <fullName>B25__MaxCapacity__c</fullName>
    <description>The highest capacity from the default capacity and the max layout capacity.</description>
    <formula>IF(B25__NumberOfActiveLayouts__c = 0, B25__Capacity__c, MAX(B25__Capacity__c, B25__MaxLayoutCapacity__c))</formula>
    <inlineHelpText>La capacité la plus élevée entre la capacité par défaut et la capacité maximale de la disposition.</inlineHelpText>
    <label>Max Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>