force-app/main/default/objects/B25__Resource__c/fields/B25__MaxLayoutCapacity__c.field-meta.xml
<CustomField>
    <fullName>B25__MaxLayoutCapacity__c</fullName>
    <description>The maximum capacity of all the related layouts.</description>
    <inlineHelpText>La capacité maximale de toutes les dispositions connexes.</inlineHelpText>
    <label>Max Layout Capacity</label>
    <summarizedField>B25__ResourceLayout__c.B25__Capacity__c</summarizedField>
    <summaryFilterItems>
        <field>B25__ResourceLayout__c.B25__IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>B25__ResourceLayout__c.B25__Resource__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>