force-app/main/default/objects/B25__Resource__c/fields/B25__NumberOfActiveLayouts__c.field-meta.xml
<CustomField>
    <fullName>B25__NumberOfActiveLayouts__c</fullName>
    <description>The number of active Layouts available for this Resource.</description>
    <inlineHelpText>Le nombre de dispositions actives disponibles pour cette ressource.</inlineHelpText>
    <label>Number of Active Layouts</label>
    <summaryFilterItems>
        <field>B25__ResourceLayout__c.B25__IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>B25__ResourceLayout__c.B25__Resource__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>