force-app/main/default/objects/B25__Resource__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>A Resource with a lower order is displayed on the Calendar above a Resource with a higher order.</description>
    <inlineHelpText>Une ressource avec un ordre inférieur est affichée sur le calendrier au-dessus d’une ressource avec un ordre supérieur.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>