force-app/main/default/objects/B25__Resource__c/fields/B25__Parent__c.field-meta.xml
<CustomField>
    <fullName>B25__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the parent Resource of this Resource record.</description>
    <inlineHelpText>Une recherche de la ressource parente de cet enregistrement de ressource.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Resources (Parent)</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>