force-app/main/default/objects/B25__Resource__c/fields/B25__Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Resource Type to which this Resource record belongs.</description>
    <inlineHelpText>Le type de ressource auquel cet enregistrement de ressource appartient.</inlineHelpText>
    <label>Resource Type</label>
    <referenceTo>B25__Resource_Type__c</referenceTo>
    <relationshipLabel>Resources (Resource Type)</relationshipLabel>
    <relationshipName>TypeResources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>