force-app/main/default/objects/B25__Resource__c/listViews/B25__All_Resources_23897.listView-meta.xml
<ListView>
    <fullName>B25__All_Resources_23897</fullName>
    <columns>NAME</columns>
    <columns>B25__Context__c</columns>
    <columns>B25__Is_Active__c</columns>
    <columns>B25__Resource_Type__c</columns>
    <columns>B25__MaxCapacity__c</columns>
    <columns>B25__Timezone__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>